--- a/virtuoso-setup/vhost_export.vspx.isql.in
+++ b/virtuoso-setup/vhost_export.vspx.isql.in
@@ -80,6 +80,7 @@ NULL,
 DB.DBA.XML_SET_NS_DECL ('mdr', 'http://mdr.semic.eu/def#', 2);
 DB.DBA.XML_SET_NS_DECL ('vdm', 'http://@IPNAME@/def#', 2);
 DB.DBA.XML_SET_NS_DECL ('adms','http://www.w3.org/ns/adms#', 2);
+DB.DBA.XML_SET_NS_DECL ('dcterms','http://purl.org/dc/terms/', 2);
 
 DB.DBA.VHOST_REMOVE (
 	 lhost=>'*ini*',
