Added some .in files which will be processed by configure.ac or configure.sh when building the system.

--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -14,14 +14,14 @@ COPY system/data/* /var/lib/virtuoso-opensource-6.1/db/data/
 ADD data.ttl /var/lib/virtuoso-opensource-6.1/db/data/
 ADD dcatods.ttl /var/lib/virtuoso-opensource-6.1/db/data/
 ADD dcatapsdmx.ttl /var/lib/virtuoso-opensource-6.1/db/data/
-COPY system /var/lib/virtuoso-opensource-6.1/vsp/vdm
-RUN ls /var/lib/virtuoso-opensource-6.1/vsp/vdm
-COPY virtuoso-setup/vhost_export.vspx.isql /var/lib/virtuoso-opensource-6.1/vsp/vdm/vhost_export.vspx.isql
+COPY system /var/lib/virtuoso-opensource-6.1/vsp/@SUBNAME@
+RUN ls /var/lib/virtuoso-opensource-6.1/vsp/@SUBNAME@
+COPY virtuoso-setup/vhost_export.vspx.isql /var/lib/virtuoso-opensource-6.1/vsp/@SUBNAME@/vhost_export.vspx.isql
 COPY virtuoso-setup/virtuoso.ini /etc/virtuoso-opensource-6.1/virtuoso.ini
 EXPOSE 8890 
 EXPOSE 1111
 RUN cd /var/lib/virtuoso-opensource-6.1/db \
     && virtuoso-t +wait -c /etc/virtuoso-opensource-6.1/virtuoso.ini \
-    && ( cat /var/lib/virtuoso-opensource-6.1/vsp/vdm/vhost_export.vspx.isql ; echo "ld_dir('/var/lib/virtuoso-opensource-6.1/db/data', '*.ttl', 'http://vocabs.tenforce.com/DAV');\nld_dir('/var/lib/virtuoso-opensource-6.1/db/data', '*.rdf', 'http://vocabs.tenforce.com/DAV');\nrdf_loader_run();\nexec('checkpoint');\nshutdown();registry_set ('__sparql_endpoint_debug', '1');" ) | isql-vt -U dba -P dba
+    && ( cat /var/lib/virtuoso-opensource-6.1/vsp/@SUBNAME@/vhost_export.vspx.isql ; echo "ld_dir('/var/lib/virtuoso-opensource-6.1/db/data', '*.ttl', 'http://@IPNAME@/DAV');\nld_dir('/var/lib/virtuoso-opensource-6.1/db/data', '*.rdf', 'http://@IPNAME@/DAV');\nrdf_loader_run();\nexec('checkpoint');\nshutdown();registry_set ('__sparql_endpoint_debug', '1');" ) | isql-vt -U dba -P dba
 
 CMD ["/usr/bin/virtuoso-t","+wait", "+foreground","-c","/etc/virtuoso-opensource-6.1/virtuoso.ini"]
