--- a/system/www/index.html.in
+++ b/system/www/index.html.in
@@ -14,10 +14,10 @@
 <header>
   <div class="logo">
     <a href="https://www.semic.eu">
-      <img src="/vdm/images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
+      <img src="%BASEURI%images/semic_logo.png" alt="SEMIC logo" width="90" height="90" />
     </a>
   </div>
-  <h1><a href="/vdm/" color="white">Core Data Model Mapping Directory</a></h1>
+  <h1><a href="%BASEURI%" color="white">Core Data Model Mapping Directory</a></h1>
 </header>
 
 <section id="intro">
@@ -46,15 +46,15 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 
   <p>The platform has mappings available for the following vocabularies:
   <ul>
-    <li><a href="http://vocabs.tenforce.com/vdm/id/cv/0b0cb2485cb9429c5df6ec01d10a3dae">Core Vocabularies</a>,
+    <li><a href="/%SUBNAME%/id/cv/0b0cb2485cb9429c5df6ec01d10a3dae">Core Vocabularies</a>,
 			<ul>
 
 				<!-- <li><a href="Core_Vocabularies_v1.3.xlsx">Core Vocabularies Mapping Table</a></li>-->
 				<li>Examples of some entry points are:
 						<ul>
-							<li>the <a href="http://vocabs.tenforce.com/vdm/id/cv/5bc9674db0153b2bc6504561061629f7">Person Family Name</a> property (Core Vocabularies);</li>
-							<li>the <a href="http://vocabs.tenforce.com/vdm/id/cv/55ce4ba4dd72952de7c7b0180ff9f9e9">Address Post Code</a> Property;</li>
-							<li>the <a href="http://vocabs.tenforce.com/vdm/id/cv/5f244e4ceda0917c01ed4ebc6d28dc9e">Person Country Of Birth</a> Property;</li>
+							<li>the <a href="/%SUBNAME%/id/cv/5bc9674db0153b2bc6504561061629f7">Person Family Name</a> property (Core Vocabularies);</li>
+							<li>the <a href="/%SUBNAME%/id/cv/55ce4ba4dd72952de7c7b0180ff9f9e9">Address Post Code</a> Property;</li>
+							<li>the <a href="/%SUBNAME%/id/cv/5f244e4ceda0917c01ed4ebc6d28dc9e">Person Country Of Birth</a> Property;</li>
 						</ul>
 				</li>
 				<li><a href="visualisation/cvtree.html">Tree visualisation of the core vocabulary mapping</a></li>
@@ -63,22 +63,22 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 		<li>
 			<p>Target Core Data Models:
 				<ul>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/dcfce6b9b80785dd9ab8643040bcb443">NIEM 3.0</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/2e68deedd01558073d0c81ae7e50710c">Stelselcatalogus</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/f63126b7756b24674a18627c950debc4">UN/CEFACT CCL 13B</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/fd73e3df8b3af1f0e7924826d6f8ff4c">MUG- BII</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/a0c35a8f05b397108f5512bf3e607374">Core Vocabularies RDF Schemas</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/5253ba2b4c926f6d1bba2dbfd8583dc4">OASIS UBL Common Library 2.1</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/d9d81d7ce8c968ff9a4c276cc616e9ec">KoSIT - XOV</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/84e43483add551a8f41765f4e21afc42">Swedish Company data model</a></li>
-					<li><a href="http://vocabs.tenforce.com/vdm/id/cv/eb004434a93bbeaa2ba5968d26af06be">eIDAS minimum dataset</a></li>
+					<li><a href="/%SUBNAME%/id/cv/dcfce6b9b80785dd9ab8643040bcb443">NIEM 3.0</a></li>
+					<li><a href="/%SUBNAME%/id/cv/2e68deedd01558073d0c81ae7e50710c">Stelselcatalogus</a></li>
+					<li><a href="/%SUBNAME%/id/cv/f63126b7756b24674a18627c950debc4">UN/CEFACT CCL 13B</a></li>
+					<li><a href="/%SUBNAME%/id/cv/fd73e3df8b3af1f0e7924826d6f8ff4c">MUG- BII</a></li>
+					<li><a href="/%SUBNAME%/id/cv/a0c35a8f05b397108f5512bf3e607374">Core Vocabularies RDF Schemas</a></li>
+					<li><a href="/%SUBNAME%/id/cv/5253ba2b4c926f6d1bba2dbfd8583dc4">OASIS UBL Common Library 2.1</a></li>
+					<li><a href="/%SUBNAME%/id/cv/d9d81d7ce8c968ff9a4c276cc616e9ec">KoSIT - XOV</a></li>
+					<li><a href="/%SUBNAME%/id/cv/84e43483add551a8f41765f4e21afc42">Swedish Company data model</a></li>
+					<li><a href="/%SUBNAME%/id/cv/eb004434a93bbeaa2ba5968d26af06be">eIDAS minimum dataset</a></li>
 				</ul>
 			</p>
 		</li>
     <li>
 			DCAT-AP <a href="http://data.opendatasupport.eu">Open Data Support</a> Mappings:
 			<ul>
-				<li><a href="/vdm/id/cv/34884a917711536741cf1da45b7f6b41">Browsable View</a>,</li>
+				<li><a href="/%SUBNAME%/id/cv/34884a917711536741cf1da45b7f6b41">Browsable View</a>,</li>
 				<li>
 					<a href="visualisation/tree.html">Tree Visualisation 
 						of the DCAT-AP configuration mappings in Open Data Support</a>
@@ -89,7 +89,7 @@ and reuse the information is via the SPARQL endpoint for machine readeable acces
 			SDMX - DCAT-AP Mappings:
 			<ul>
 				<li>
-					<a href="/vdm/id/cv/0a7380a6c87798dc2d0db45ef1814630">Browsable View</a>
+					<a href="/%SUBNAME%/id/cv/0a7380a6c87798dc2d0db45ef1814630">Browsable View</a>
 				</li>
 				<li>
 					<a href="visualisation/sdmxtree.html">Tree Visualisation 
