--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,7 @@ AC_CHECK_PROG(SORT, [sort],[/usr/bin/sort])
 AC_CHECK_PROG(AWK, [awk],[/usr/bin/awk])
 AC_CHECK_PROG(TR, [tr],[/usr/bin/tr])
 AC_CHECK_PROG(ROQET, [roqet],[/usr/bin/roqet])
+AC_CHECK_PROG(MAKE, [make], [/usr/bin/make])
 AC_CHECK_PROG(EMACS, [emacs],[/usr/bin/emacs])
 AC_CHECK_PROG(XSLTPROC, [xsltproc],[/usr/bin/xsltproc])
 AC_CHECK_PROG(SSH,[ssh],[/usr/bin/ssh])
