--- a/system/xslt/include.xsl.in
+++ b/system/xslt/include.xsl.in
@@ -31,7 +31,7 @@
   xmlns:dcterms="http://purl.org/dc/terms/"
 	xmlns:adms="http://www.w3.org/ns/adms#"
   xmlns:skos="http://www.w3.org/2004/02/skos/core#"
-  xmlns:vdm="http://vocabs.tenforce.com/def#"
+  xmlns:vdm="http://mapping.semic.eu/def#"
   exclude-result-prefixes="xsl ns rdf rdfs locn">
 
   <xsl:param name="baseuri" select="'%BASEURI%'" />
@@ -157,50 +157,50 @@
     <dl class="properties">
 			<dt>Internal Identifier</dt>
 			<dd>
-        <xsl:choose>
-					<xsl:when test="$subject/vdm:has_internalidentifier">
-						<xsl:call-template name="rdf-value">
-							<xsl:with-param name="element" 
-															select="$subject/vdm:has_internalidentifier"/>
-							<xsl:with-param name="strip-uri" select="true()" />
-						</xsl:call-template>
-					</xsl:when>
-					<xsl:otherwise>
-						<xsl:text>No internal identifier</xsl:text>
-					</xsl:otherwise>
-				</xsl:choose>
+			  <xsl:choose>
+			    <xsl:when test="$subject/vdm:has_internalidentifier">
+			      <xsl:call-template name="rdf-value">
+				<xsl:with-param name="element" 
+						select="$subject/vdm:has_internalidentifier"/>
+				<xsl:with-param name="strip-uri" select="true()" />
+			      </xsl:call-template>
+			    </xsl:when>
+			    <xsl:otherwise>
+			      <xsl:text>No internal identifier</xsl:text>
+			    </xsl:otherwise>
+			  </xsl:choose>
 			</dd>
 			<dt>Public ID</dt>
 			<dd>
-				<xsl:choose>
-					<xsl:when test="$subject/dcterms:identifier">
-						<a href="{$subject/dcterms:identifier/@rdf:resource}" 
-							 title="This is the Public Identifier for this resource">
-							<xsl:value-of select="$subject/dcterms:identifier/@rdf:resource"/>
-						</a>
-					</xsl:when>
-					<xsl:when test="not($subject/vdm:has_internalidentifier)">
-						<a href="{$subject-uri}" 
-							 title="This is the Public Identifier for this resource">
-							<xsl:value-of select="$subject-uri"/>
-						</a>
-					</xsl:when>
-					<xsl:otherwise>
-						<xsl:text>No public identifier</xsl:text>
-					</xsl:otherwise>
-				</xsl:choose>
+			  <xsl:choose>
+			    <xsl:when test="$subject/dcterms:identifier">
+			      <a href="{$subject/dcterms:identifier/@rdf:resource}" 
+				 title="This is the Public Identifier for this resource">
+				<xsl:value-of select="$subject/dcterms:identifier/@rdf:resource"/>
+			      </a>
+			    </xsl:when>
+			    <xsl:when test="not($subject/vdm:has_internalidentifier)">
+			      <a href="{$subject-uri}" 
+				 title="This is the Public Identifier for this resource">
+				<xsl:value-of select="$subject-uri"/>
+			      </a>
+			    </xsl:when>
+			    <xsl:otherwise>
+			      <xsl:text>No public identifier</xsl:text>
+			    </xsl:otherwise>
+			  </xsl:choose>
 			</dd>
       <dt>CDMMD ID</dt>
-			<dd>
-				<xsl:choose>
-					<xsl:when test="$subject/vdm:has_internalidentifier">
-						<a href="{$subject-uri}" title="This is the Core Data Model Mapping Directory (CDMMD) Identifier, which will always point to this page"><xsl:value-of select="$subject-uri" /></a>
-					</xsl:when>
-					<xsl:otherwise>
-						<xsl:text>No CDMMD Id</xsl:text>
-					</xsl:otherwise>
-				</xsl:choose>
-				</dd>
+      <dd>
+	<xsl:choose>
+	  <xsl:when test="$subject/vdm:has_internalidentifier">
+	    <a href="{$subject-uri}" title="This is the Core Data Model Mapping Directory (CDMMD) Identifier, which will always point to this page"><xsl:value-of select="$subject-uri" /></a>
+	  </xsl:when>
+	  <xsl:otherwise>
+	    <xsl:text>No CDMMD Id</xsl:text>
+	  </xsl:otherwise>
+	</xsl:choose>
+      </dd>
       <xsl:if test="$subject/rdf:type">
         <dt>Type</dt>
         <dd>
@@ -263,16 +263,16 @@
 		
 		<xsl:variable name="uri">
 			<xsl:choose>
-				<xsl:when test="local-name($element) = 'broadMatch'">
-					<xsl:value-of select="concat(namespace-uri($element), 'narrowMatch')"/>
-				</xsl:when>
-				<xsl:when test="local-name($element) = 'narrowMatch'">
-					<xsl:value-of select="concat(namespace-uri($element), 'broadMatch')"/>
-				</xsl:when>
-				<xsl:otherwise>
-					<xsl:value-of 
-							select="concat(namespace-uri($element), local-name($element))" />
-				</xsl:otherwise>
+			  <xsl:when test="local-name($element) = 'broadMatch'">
+			    <xsl:value-of select="concat(namespace-uri($element), 'narrowMatch')"/>
+			  </xsl:when>
+			  <xsl:when test="local-name($element) = 'narrowMatch'">
+			    <xsl:value-of select="concat(namespace-uri($element), 'broadMatch')"/>
+			  </xsl:when>
+			  <xsl:otherwise>
+			    <xsl:value-of 
+				select="concat(namespace-uri($element), local-name($element))" />
+			  </xsl:otherwise>
 			</xsl:choose>
 		</xsl:variable>
 
